app/assets/stylesheets/custom.css.scss
$navbar-default-bg: black;

// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
@import "bootstrap-sprockets";
@import "bootstrap";

#logo {
  float: left;
  font-size: 1.7em;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: -1px;
  font-weight: bold;
}

#logo:hover {
  color: #fff;
  text-decoration: none;
}

.center {
  text-align: center;
}

.jumbotron {
  background-image: asset-url('new_cover_page.png');
  background-size: cover;
  height: 550px;
}

.jumbotron h1 {
  color: #fff;
  text-align: center;
  margin-bottom: 30px;
  letter-spacing: -1px;
  font-weight: bold;
}

.btn-xlarge {
  font-size: 1.7em;
  background-color: black;
}

footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid #eaeaea;
  color: #777;
}

footer a:hover {
  color: #222;
}

footer small {
  float: left;
}

footer ul {
  float: right;
  list-style: none;
}

footer ul li {
  float: left;
  margin-left: 15px;
}

.article-meta-details {
  border-top: 1px solid #eaeaea;
  margin-top: 15px;
}

.article-actions {
  border-top: 1px solid #eaeaea;
  padding-top: 5px;
}

.description {
  margin-top: 0;
}

.article-title {
  font-weight: bold;
  font-size: 1.5em;
}

.article-body {
  border-top: 1px solid #eaeaea;
  padding-top: 15px;
  padding-bottom: 15px;
}

.listing {
  list-style: none;
  padding-left: 0;
}

.input_checkbox input {
  width: auto !important;
}

.badge {
  background-color: #CEF6F5;
  text-transform: uppercase;
  letter-spacing: -1px;
  font-weight: bold;
}

